@@ -35,6 +35,8 @@ Foo foo = Stub {
 }
 ----
 
+- A sequence of two or more underscores can be used to separate multiple data tables in one `where` block.
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
